<resources>
    <string name="app_name">Nexgen Mobile FilmFest </string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Nexgen Mobile FilmFest </string>
    <string name="contact">INFORMATION</string>
    <string name="distributor">DISTRIBUTOR:</string>
    <string name="number">NUMBER:</string>
    <string name="address">ADDRESS:</string>
    <string name="telephone">TELEPHONE</string>
    <string name="email">EMAIL</string>
    <string name="film_information">FILM INFORMATION</string>
    <string name="title">TITLE</string>
    <string name="original">ORIGINAL TITLE</string>
    <string name="genre">GENRE OF FILM</string>
    <string name="running">RUNNING TIME</string>
    <string name="director">"Director      "</string>
    <string name="producer">PRODUCER</string>
    <string name="screen_writer">SCREEN WRITER(s)</string>
    <string name="star_cast_male">STAR CAST(Male)</string>
    <string name="star_cast_female">STAR CAST(Female)</string>
    <string name="counries">S.COUNTRY(ies) OF PRODUCTION</string>
    <string name="languages">LANGUAGES</string>
    <string name="blank">"                          "</string>
    <string name="next">NEXT</string>
    <string name="terms">TERMS AND CONDITION :</string>
    <string name="about1">NEXGEN MOBILE FILM FESTIVAL is the 1st marketed festival to start of by catering specifically to the short films who have been rejected by other film festivals and also Where Audience Around the world can get to view and participate in on the voting process of Numerous of Short Films from talented Filmmakers Globally Right from the comfort of their Mobile Phones and other hardware designed to equip the NEXGEN MOBILE FILM FESTIVAL APP. </string>
    <string name="about2">We will Promote, Screen, and shine light on these Short films in order to both inspire and encourage rejected filmmakers to continue making Films and not to be discouraged by the thousands of rejection letters they have received in the past. </string>
    <string name="about3">OUR FESTIVAL plans to compensate the winning filmmaker who screens with us, Portions of the money from the proceed of entry will be entered towards the film jackpot and will be awarded to the winner in order to help them make back what they may have lost in previous entry fees. </string>
    <string name="about4">NEXGEN MOBILE FILM FESTIVAL will judge films accordingly through a point based system based on Storytelling, Acting, Editing And Cinematography.</string>
    <string name="about5">NEXGEN MOBILE FILM FESTIVAL will run from a span of 6 months for the submission process and 1 month for the screening and voting process from the audience.</string>
    <string name="about6">TERMS AND CONDITION :</string>
    <string name="terms1">NEXGEN MOBILE FILM FESTIVAL is the 1st marketed festival to start of by catering specifically to the short films who have been rejected by other film festivals and also Where Audience Around the world can get to view and participate in on the voting process of Numerous of Short Films from talented Filmmakers Globally Right from the comfort of their Mobile Phones and other hardware designed to equip the NEXGEN MOBILE FILM FESTIVAL APP.We will Promote, Screen, and shine light on these Short films in order to both inspire and encourage rejected filmmakers to continue making Films and not to be discouraged by the thousands of rejection letters they have received in the past.OUR FESTIVAL plans to compensate the winning filmmaker who screens with us, Portions of the money from the proceed of entry will be entered towards the film jackpot and will be awarded to the winner in order to help them make back what they may have lost in previous entry fees.NEXGEN MOBILE FILM FESTIVAL will judge films accordingly through a point based system based on Storytelling, Acting, Editing And Cinematography.NEXGEN MOBILE FILM FESTIVAL will run from a span of 6 months for the submission process and 1 month for the screening and voting process from the audience.</string>
    <string name="terms_and_condition">By entering your film for consideration for the 2013 Nexgen Mobile Film Festival, you authorize that your work is cleared for festival exhibition and accept full legal responsibility for the intellectual property therein.\nEntry into the festival constitutes permission to exhibit your work at the 2013 Nexgen Mobile Film Festival. The Nexgen Mobile Film Festival is also hereby granted the right to utilize an excerpt from any film submitted and accepted for exhibition at the Festival for promotional purposes.\nThe undersigned shall indemnify and hold harmless the Nexgen Mobile Film Festival from and against any and all claims, liabilities, losses, damages, and expenses (including but not limited to attorney’s fees, and costs of the court) which may be incurred by reason of any claim involving copyright, trademark, credits, publicity, screening, and loss of or damage to the screening videos entered.</string>
    <string name="credit">CREDIT CARD</string>
    <string name="last_name">LAST NAME</string>
    <string name="first_name">FIRST NAME</string>
    <string name="credit_number">CREDIT CARD NUMBER</string>
    <string name="expire">EXPIRATION MONTH</string>
    <string name="year">YEAR</string>
    <string name="code">CODE</string>
    <string name="continu">COUNTINUE</string>
    <string name="password">PASSWORD  </string>
    <string name="viewer_name">VIEWER NAME</string>
    <string name="viewer_email">EMAIL ID</string>
    <string name="confirm_pass">CONFIRM PASSWORD</string>
    <string name="submit">SUBMIT</string>
    <string name="q1">What genres do you accept?</string>
    <string name="q2">When must submitted films arrive?</string>
    <string name="q3">How do I know you received my film?</string>
    <string name="q4">How many copies of the screeners should I send?</string>
    <string name="q5">Can I submit a Blu-ray?</string>
    <string name="q6">Can we send updated versions of the film?</string>
    <string name="q7">How long can films be?</string>
    <string name="q8">Do you have any ratings limitations? Must films be PG or PG-13? Do you program films with strong content and language?</string>
    <string name="q9">Do you have competition sections?</string>
    <string name="q10">Do you screen films out of competition?</string>
    <string name="q11">How many films are put in competition?</string>
    <string name="q12">What are the awards giving for the winners?</string>
    <string name="q13">How do you program your shorts?</string>
    <string name="q14">Do you program international films?</string>
    <string name="q15">Do you prefer films with stars?</string>
    <string name="q16">I submitted last year and wasn’t accepted. Can I resubmit?</string>
    <string name="q17">I worked on or acted in a film, but didn’t produce or direct it, can I submit? I was the director, but not the producer, or vice versa, can I submit on my own?</string>
    <string name="q18">Who are your screeners?</string>
    <string name="q19">Can someone who submitted a film or worked on a submitted film also be a screener?</string>
    <string name="q20">Are films selected based on scores?</string>
    <string name="q21">Can I see my scores?</string>
    <string name="q22">Can I find out how my film is doing once I’ve submitted?</string>
    <string name="q23">Who makes final selections?</string>
    <string name="qn2">What format must i send my Screener in ?</string>
    <string name="ansn2">H.264 video, up to 5 Mbps, 720 by 480 pixels, 24,30 frames per second, Baseline Profile up to Level 4.0 with AAC-LC stereo audio up to 192 Kbps, 48kHz, in mov, .mp4 and .m4v file formats and file size must be 15mins in length and 500mb or less.</string>
    <string name="cinemato">CINEMATOGRAPHER</string>
    <string name="screening">Screenings    </string>
    <string name="description">Description    </string>
    <string name="producernew">"Producer     "</string>
    <string name="editornew">"Editor     "</string>
    <string name="cinematography">"Cinematography      "</string>
    <string name="sample">"sample sample sample sample sample sample sample sample sample sample sample sample sample sample sample sample "</string>
    <string name="term1">1. Please read all of the terms and conditions below. </string>
    <string name="term2">2. The deadline dates are not postmark deadlines, they are the dates by which your film must be received in our office. </string>
    <string name="term3">3. All works must be submitted through digital download through www.Dropbox.com for pre-screening. Please do not send film reels or original material. </string>
    <string name="term4">4. Screeners will not be returned. </string>
    <string name="term5">5. Eligible works must have been completed after Oct, 2010. </string>
    <string name="term6">6. Works in progress WILL be accepted for submission. Please include information as to what still needs to be completed (color correction, score, etc.) with the submitted Film. </string>
    <string name="term7">7. If you want to replace your original submission with an upgraded version, you must submit a new film clearly labeled with the entry number and Replacement Copy. Any judging that was done with the original submission will not be discarded. Any future judging will be done with the new copy. </string>
    <string name="term8">8. The Nexgen Mobile Film Festival does not present sponsored works (such as training films or commercials produced for a client). Only independently produced films are appropriate for this competition. Artists must have final creative control over their work to be eligible. </string>
    <string name="term9">9. The Nexgen Mobile Film Festival does not pay screening fees. </string>
    <string name="term10">10. All works selected must be completed and available by Sep, 2013 for inclusion in the festival. </string>
    <string name="term11">11. Notifications: Email notifications of final status will be sent by  Sep , 2013.</string>
    <string name="rule1">1. Please read all of the terms and conditions below.</string>
    <string name="rule2">2. The deadline dates are not postmark deadlines, they are the dates by which your film must be received in our office. </string>
    <string name="rule3">3. All works must be submitted through digital download through www.Dropbox.com for pre-screening. Please do not send film reels or original material. </string>
    <string name="rule4">4. Screeners will not be returned.</string>
    <string name="rule5">5. Eligible works must have been completed after Oct, 2010.</string>
    <string name="rule6">6. Works in progress WILL be accepted for submission. Please include information as to what still needs to be completed (color correction, score, etc.) with the submitted Film.</string>
    <string name="rule7">7. If you want to replace your original submission with an upgraded version, you must submit a new film clearly labeled with the entry number and “Replacement Copy”. Any judging that was done with the original submission will not be discarded. Any future judging will be done with the new copy.</string>
    <string name="rule8">8. The Nexgen Mobile Film Festival does not present sponsored works (such as training films or commercials produced for a client). Only independently produced films are appropriate for this competition. Artists must have final creative control over their work to be eligible.</string>
    <string name="rule9">9. The Nexgen Mobile Film Festival does not pay screening fees.</string>
    <string name="rule10">10. All works selected must be completed and available by  September, 2013 for inclusionSep Sep in the festival.</string>
    <string name="rule11">11. Notifications: Email notifications of final status will be sent by September, 2013</string>
</resources>