<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/terms_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

       

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="5dp" 
                android:layout_marginTop="10dp"
                android:layout_marginBottom="55dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="824dp"
                    android:layout_marginLeft="28dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/text_terms1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/term1"
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    
                    
                    <TextView
                        android:id="@+id/text_terms1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/term2"
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    
                    
                    <TextView
                        android:id="@+id/text_terms1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/term3"
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    <TextView
                        android:id="@+id/text_terms1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/term4"
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    <TextView
                        android:id="@+id/text_terms1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/term5"
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    <TextView
                        android:id="@+id/text_terms1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/term6"
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    
                    <TextView
                        android:id="@+id/text_terms1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/term7"
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    
                    <TextView
                        android:id="@+id/text_terms1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/term8"
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    
                    
                    <TextView
                        android:id="@+id/text_terms1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/term9"
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    
                    
                    <TextView
                        android:id="@+id/text_terms1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/term10"
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    
                    
                    <TextView
                        android:id="@+id/text_terms1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/term11"
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    
                    
                <!--     <TextView
                        android:id="@+id/text_terms2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    
                    <TextView
                        android:id="@+id/text_terms3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text=""
                        android:textColor="@color/white" />
                    
                    
                    <TextView
                        android:id="@+id/text_terms4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    
                    
                    <TextView
                        android:id="@+id/text_terms5"
                        android:layout_width="fill_parent"
                        android:layout_margin="2dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white" />
                    
                    
                    <TextView
                        android:id="@+id/text_terms6"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    
                    
                    
                    <TextView
                        android:id="@+id/text_terms7"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_margin="2dp"
                        android:textColor="@color/white" />
                    
                    
                    <TextView
                        android:id="@+id/text_terms8"
                        android:layout_width="fill_parent"
                        android:layout_margin="2dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white" />
                    
                    
                    <TextView
                        android:id="@+id/text_terms9"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text=""
                        android:textColor="@color/white" />
                    
                    
                    <TextView
                        android:id="@+id/text_terms10"
                        android:layout_width="fill_parent"
                        android:layout_margin="2dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white" />
                    
                    <TextView
                        android:id="@+id/text_terms11"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text=""
                        android:textColor="@color/white" /> -->
                    
                    
                </LinearLayout>
            </ScrollView>
       

        <Button
            android:id="@+id/btn_countinue_term"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="Submit"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_without_text" />
    </RelativeLayout>

</LinearLayout>